--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./public/css/home.css">
     <title>Document</title>
+    <script type="module" src="../test.js" defer></script>
 </head>
 <body>
-    
-    <script type="module" src="../test.js"></script>
-</body>
+    <section class="heropage">
+        <div class="imgheropage"><style></style>
+                <div class="heropage_content">
+                <h1>Titre du film</h1>
+                            <p>Matt Murdock capacités extraordinaires, lutte pour la justice à travers son cabinet d'avocats en pleine effervescence. Pendant ce temps, l'ancien chef mafieux Wilson Fisk poursuit ses ambitions politiques à New York. Alors que leurs anciennes identités refont surface, les deux hommes se </p>
+                    <div class="btn_heropage">
+                                <a href="#" class="btn"><button>Ajouter à la liste</button></a>
+                                <a href="#" class="btn"><button>+</button></a>
+                    </div>
+        </div>
+    </section>
+ </body>
 </html>
