adding moviedetails page with his css/js, fetching an using the api for dynamic stuff but there's static version with one movie in waiting the href on other pages / added : movie details (poster, name, casting, rate etc) and fonctionnality comments / TO DO : CSS, adding recommended movies and maybe let a rate function of the movie in the form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script type="module" src="../test.js"></script>
+    <script type="module" src="/Movela/controllers/js/test.js"></script>
 </body>
 </html>
