Add new list for movies and add the animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./public/css/root.css">
     <link rel="stylesheet" href="./public/css/nav.css">
-    <link rel="stylesheet" href="./public/css/home.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>MOVELA - Accueil</title>
 </head>
 <body>
@@ -33,6 +33,22 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <!-- Indicateurs pour le slider -->
+        <div class="hero-indicators">
+            <!-- Les indicateurs seront générés dynamiquement -->
+        </div>
+    </section>
+    
+    <section id="latest-releases" class="latest-releases">
+        <h2>Dernières Sorties</h2>
+        <div class="swiper-container-latest">
+            <div class="swiper-wrapper">
+                <!-- Les films seront insérés ici dynamiquement -->
+            </div>
+            <!-- Boutons de navigation -->
+            <div class="swiper-button-next-latest"></div>
+            <div class="swiper-button-prev-latest"></div>
         </div>
     </section>
 
