implementation of pagination and search

--- a/series.html
+++ b/series.html
@@ -33,6 +33,7 @@
     <script src="./components/nav.js"></script>
     <script src="./controllers/js/nav.js"></script>
     <script src="./controllers/js/series.js"></script>
+    <script src="./controllers/js/search.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavbar();
