--- a/films.html
+++ b/films.html
@@ -34,6 +34,7 @@
     <script src="./components/nav.js"></script>
     <script src="./controllers/js/nav.js"></script>
     <script src="./controllers/js/films.js"></script>
+    <script src="./controllers/js/search.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavbar();
