--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="./controllers/js/nav.js"></script>
     <script src="./controllers/js/carroussel.js" defer></script>
     <script src="./controllers/js/hero.js" defer></script>
+    <script src="./controllers/js/search.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavbar();
