Add favorites button with the card img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </a>
                     </div>
                     <a href="#" class="btn">
-                        <button><img src="./public/assets/plus.png" alt=""></button>
+                        <button><i class="fa fa-plus" style="font-size:40px;color:var(--cta-color)"></i></button>
                     </a>
                 </div>
             </div>
