change paths + localstorage

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <h1>Titre du film</h1>
                 <p>Description du film</p>
                 <div class="btn_heropage">
-                    <div class="addlist">
-                        <a href="#" class="btn">
-                            <button><img src="./public/assets/play_arrow.png" alt="">Afficher détails</button>
-                        </a>
-                    </div>
-                    <a href="#" class="btn">
-                        <button><i class="fa fa-plus" style="font-size:40px;color:var(--cta-color)"></i></button>
-                    </a>
-                </div>
+    <div class="addlist">
+        <a href="#" class="btn">
+            <button><img src="./public/assets/play_arrow.png" alt="">Afficher détails</button>
+        </a>
+    </div>
+    <button id="hero-favorite-btn" class="favorite-btn">
+        <i class="fa fa-plus" style="font-size:40px;color:var(--cta-color)"></i>
+    </button>
+</div>
             </div>
         </div>
         <!-- Indicateurs pour le slider -->
