--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="./public/css/root.css">
     <link rel="stylesheet" href="./public/css/nav.css">
     <link rel="stylesheet" href="./public/css/style.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"defer></script>
+    <script src="./components/nav.js" defer></script>
+    <script src="./controllers/js/nav.js" defer></script>
+    <script src="./controllers/js/carroussel.js" defer></script>
+    <script src="./controllers/js/hero.js" defer></script>
+    <script src="./controllers/js/search.js"defer></script>
+    <script src="./controllers/js/favoris.js" defer></script>
     <title>MOVELA - Accueil</title>
 </head>
 <body>
@@ -66,12 +73,7 @@
         </div>
     </section>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="./components/nav.js"></script>
-    <script src="./controllers/js/nav.js"></script>
-    <script src="./controllers/js/carroussel.js" defer></script>
-    <script src="./controllers/js/hero.js" defer></script>
-    <script src="./controllers/js/search.js"></script>
+   
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavbar();
